# iicpc-benchmark-engine

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  bad_engine.cpp  docker-compose.yml  perfect_engine.cpp  run-all.ps1  slow_engine.cpp  test_engine.cpp
.github/workflows/: deploy.yml
common/: Cargo.toml
common/src/: models.rs
dummy-engine/: Cargo.toml  Dockerfile
dummy-engine/src/: main.rs
frontend/: Dockerfile  next.config.ts  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend_backup/: package-lock.json  tailwind.config.ts
frontend_backup/src/app/: globals.css  layout.tsx  page.tsx
frontend_backup/src/components/: SubmitModal.tsx
iac/: 00-rbac.yaml  01-infrastructure.yaml  02-core-services.yaml
load-generator/: Cargo.toml  Dockerfile
load-generator/src/: main.rs
sandboxing-engine/: Cargo.toml
sandboxing-engine/src/: main.rs
telemetry-ingester/: Cargo.toml  Dockerfile
telemetry-ingester/src/: main.rs  orderbook.rs
