[package]
name = "dummy-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
axum       = "0.7"
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
common     = { path = "../common" }
