[package]
name = "sandboxing-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
uuid = { version = "1.8", features = ["v4"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
kube = { version = "0.88", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21", features = ["latest"] }
common = { path = "../common" }
tower-http = { version = "0.6.11", features = ["cors"] }
