[package]
name = "telemetry-ingester"
version = "0.1.0"
edition = "2024"

[dependencies]
# ── Async runtime ─────────────────────────────────────────────────────────────
tokio          = { workspace = true }

# ── Serialization ─────────────────────────────────────────────────────────────
serde          = { workspace = true }
serde_json     = { workspace = true }

# ── Error handling ────────────────────────────────────────────────────────────
anyhow         = { workspace = true }
thiserror      = { workspace = true }

# ── Logging ───────────────────────────────────────────────────────────────────
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }

# ── Kafka consumer (pure Rust, no CMake) ─────────────────────────────────────
rskafka        = { version = "0.5", features = ["transport-tls"] }

# ── Redis async client ────────────────────────────────────────────────────────
redis          = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# ── Concurrent hashmap (lock-free reads, perfect for score store) ─────────────
dashmap        = "6"

# ── HTTP + WebSocket server (serves /ws and /api/scores to the frontend) ──────
axum           = { version = "0.7", features = ["ws"] }

# ── Broadcast channel for pushing updates to all WS clients at once ───────────
tokio-tungstenite = "0.21"
futures        = "0.3"

# ── Shared data models ────────────────────────────────────────────────────────
common         = { path = "../common" }
ordered-float = "5.3.0"
hdrhistogram = "7.5.4"
